// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json-viewer should be match array content 1`] = `
NodeList [
  <style>
    :host{--main-bg-color: #3a3c44;--main-color: #eee;--string-text-color: #f29766;--number-text-color: #77eda4;--boolean-text-color: #ed77e5;--null-text-color: #fff;position:relative;display:block;padding:.5rem 1rem;background-color:var(--main-bg-color);color:var(--main-color);font:400 14px/1.2rem monospace;text-rendering:optimizelegibility}:host .se_0c5dd1 .li_030c5f{display:block;white-space:nowrap;word-wrap:break-word}:host .se_0c5dd1 .li_030c5f .to_2745fd{display:inline-block;margin-top:-1px;margin-right:.2rem;margin-left:-0.47rem;width:1rem;height:1rem;color:#787878;vertical-align:middle}:host .se_0c5dd1 .li_030c5f .to_2745fd .pl_dc825e,:host .se_0c5dd1 .li_030c5f .to_2745fd .mi_7c9e35{fill:#787878}:host .se_0c5dd1 .li_030c5f .br_00693c{color:#898989}:host .se_0c5dd1 .li_030c5f .ke_31c9d8{color:#cfd0d0}:host .se_0c5dd1 .li_030c5f .se_e0d101{margin:0 6px 0 2px;color:#898989}:host .se_0c5dd1 .li_030c5f .si_2fbe48{margin-left:8px;color:#747272;font-size:.8rem;font-style:italic;user-select:none;vertical-align:middle}:host .se_0c5dd1 .li_030c5f .va_251777[data-type=string]{color:var(--string-text-color)}:host .se_0c5dd1 .li_030c5f .va_251777[data-type=number]{color:var(--number-text-color)}:host .se_0c5dd1 .li_030c5f .va_251777[data-type=boolean]{color:var(--boolean-text-color)}:host .se_0c5dd1 .li_030c5f .va_251777[data-type=null],:host .se_0c5dd1 .li_030c5f .va_251777[data-type=undefined]{color:var(--null-text-color)}:host .se_0c5dd1 .li_030c5f .va_251777[data-type=array],:host .se_0c5dd1 .li_030c5f .va_251777[data-type=object]{overflow:hidden;width:90%;color:#747272;font-size:.8rem;font-style:italic;vertical-align:middle}:host .se_0c5dd1&gt;.li_030c5f{cursor:pointer}:host .se_0c5dd1&gt;.li_030c5f:hover&gt;.ke_31c9d8{color:#e7e7e7}:host .se_0c5dd1&gt;.li_030c5f:hover&gt;.to_2745fd .pl_dc825e,:host .se_0c5dd1&gt;.li_030c5f:hover&gt;.to_2745fd .mi_7c9e35{fill:#979797}:host .se_0c5dd1&gt;.ch_f74b76{padding-left:1rem;border-left:1px dotted #585855}:host .se_0c5dd1&gt;.ch_f74b76[data-type=array]&gt;.li_030c5f&gt;.ke_31c9d8,:host .se_0c5dd1&gt;.ch_f74b76[data-type=array]&gt;.li_030c5f&gt;.se_e0d101{color:#747272;user-select:none}:host .se_0c5dd1[aria-expanded=true]&gt;.li_030c5f&gt;.to_2745fd .pl_dc825e{display:none}:host .se_0c5dd1[aria-expanded=true]&gt;.li_030c5f&gt;.to_2745fd .mi_7c9e35{display:inline-block}:host .se_0c5dd1[aria-expanded=true]&gt;.li_030c5f&gt;.va_251777{display:none}:host .se_0c5dd1[aria-expanded=false]&gt;.li_030c5f&gt;.to_2745fd .pl_dc825e{display:inline-block}:host .se_0c5dd1[aria-expanded=false]&gt;.li_030c5f&gt;.to_2745fd .mi_7c9e35{display:none}:host .se_0c5dd1[aria-expanded=false]&gt;.li_030c5f&gt;.va_251777{display:inline-block}:host .se_0c5dd1[aria-expanded=false]&gt;.li_030c5f&gt;.br_00693c,:host .se_0c5dd1[aria-expanded=false]&gt;.li_030c5f&gt;.si_2fbe48,:host .se_0c5dd1[aria-expanded=false]&gt;.li_030c5f&gt;.to_2745fd .mi_7c9e35,:host .se_0c5dd1[aria-expanded=false]&gt;:last-child,:host .se_0c5dd1[aria-expanded=false]&gt;.ch_f74b76{display:none}:host .se_0c5dd1:hover&gt;.ch_f74b76{border-color:#858580}:host .se_0c5dd1:hover&gt;.li_030c5f&gt;.br_00693c{color:#fffff7}
  </style>,
  <section
    class="se_0c5dd1"
  >
    <div
      class="li_030c5f"
    >
      <svg
        class="to_2745fd"
        height="20"
        viewBox="0 0 1792 1792"
        width="20"
      >
        <path
          class="mi_7c9e35"
          d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
        />
        <path
          class="pl_dc825e"
          d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
        />
      </svg>
      <span
        class="va_251777"
        data-type="array"
      >
        Array[2] [{"string":"this is a test ...","integer":42,"array":[1,2,3,"NaN"],"float":3.141,"undefined":"undefined","object":{"first-child":true,"second-child":false,"last-child":"null"},"string_number":"1234"},{"string":"this is a test ...","integer":42,"array":[1,2,3,"NaN"],"float":3.141,"undefined":"undefined","object":{"first-child":true,"second-child":false,"last-child":"null"},"string_number":"1234"}]
      </span>
      <span
        class="br_00693c"
      >
        [
      </span>
    </div>
    <section
      class="ch_f74b76"
      data-type="array"
    >
      <section
        class="se_0c5dd1"
      >
        <div
          class="li_030c5f"
        >
          <svg
            class="to_2745fd"
            height="20"
            viewBox="0 0 1792 1792"
            width="20"
          >
            <path
              class="mi_7c9e35"
              d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
            <path
              class="pl_dc825e"
              d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
          </svg>
          <span
            class="ke_31c9d8"
          >
            "0"
          </span>
          <span
            class="se_e0d101"
          >
            :
          </span>
          <span
            class="va_251777"
            data-type="object"
          >
            Object {"string":"this is a test ...","integer":42,"array":[1,2,3,"NaN"],"float":3.141,"undefined":"undefined","object":{"first-child":true,"second-child":false,"last-child":"null"},"string_number":"1234"}
          </span>
          <span
            class="br_00693c"
          >
            {
          </span>
        </div>
        <section
          class="ch_f74b76"
          data-type="object"
        >
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "string"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="string"
            >
              "this is a test ..."
            </span>
            ,
          </div>
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "integer"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="number"
            >
              42
            </span>
            ,
          </div>
          <section
            class="se_0c5dd1"
          >
            <div
              class="li_030c5f"
            >
              <svg
                class="to_2745fd"
                height="20"
                viewBox="0 0 1792 1792"
                width="20"
              >
                <path
                  class="mi_7c9e35"
                  d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
                <path
                  class="pl_dc825e"
                  d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
              </svg>
              <span
                class="ke_31c9d8"
              >
                "array"
              </span>
              <span
                class="se_e0d101"
              >
                :
              </span>
              <span
                class="va_251777"
                data-type="array"
              >
                Array[4] [1,2,3,"NaN"]
              </span>
              <span
                class="br_00693c"
              >
                [
              </span>
            </div>
            <section
              class="ch_f74b76"
              data-type="array"
            >
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "0"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="number"
                >
                  1
                </span>
                ,
              </div>
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "1"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="number"
                >
                  2
                </span>
                ,
              </div>
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "2"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="number"
                >
                  3
                </span>
                ,
              </div>
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "3"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="string"
                >
                  "NaN"
                </span>
              </div>
            </section>
            <div
              class="li_030c5f"
            >
              <span
                class="br_00693c"
              >
                ]
              </span>
              ,
            </div>
          </section>
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "float"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="number"
            >
              3.141
            </span>
            ,
          </div>
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "undefined"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="string"
            >
              "undefined"
            </span>
            ,
          </div>
          <section
            class="se_0c5dd1"
          >
            <div
              class="li_030c5f"
            >
              <svg
                class="to_2745fd"
                height="20"
                viewBox="0 0 1792 1792"
                width="20"
              >
                <path
                  class="mi_7c9e35"
                  d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
                <path
                  class="pl_dc825e"
                  d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
              </svg>
              <span
                class="ke_31c9d8"
              >
                "object"
              </span>
              <span
                class="se_e0d101"
              >
                :
              </span>
              <span
                class="va_251777"
                data-type="object"
              >
                Object {"first-child":true,"second-child":false,"last-child":"null"}
              </span>
              <span
                class="br_00693c"
              >
                {
              </span>
            </div>
            <section
              class="ch_f74b76"
              data-type="object"
            >
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "first-child"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="boolean"
                >
                  true
                </span>
                ,
              </div>
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "second-child"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="boolean"
                >
                  false
                </span>
                ,
              </div>
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "last-child"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="string"
                >
                  "null"
                </span>
              </div>
            </section>
            <div
              class="li_030c5f"
            >
              <span
                class="br_00693c"
              >
                }
              </span>
              ,
            </div>
          </section>
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "string_number"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="string"
            >
              "1234"
            </span>
          </div>
        </section>
        <div
          class="li_030c5f"
        >
          <span
            class="br_00693c"
          >
            }
          </span>
          ,
        </div>
      </section>
      <section
        class="se_0c5dd1"
      >
        <div
          class="li_030c5f"
        >
          <svg
            class="to_2745fd"
            height="20"
            viewBox="0 0 1792 1792"
            width="20"
          >
            <path
              class="mi_7c9e35"
              d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
            <path
              class="pl_dc825e"
              d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
          </svg>
          <span
            class="ke_31c9d8"
          >
            "1"
          </span>
          <span
            class="se_e0d101"
          >
            :
          </span>
          <span
            class="va_251777"
            data-type="object"
          >
            Object {"string":"this is a test ...","integer":42,"array":[1,2,3,"NaN"],"float":3.141,"undefined":"undefined","object":{"first-child":true,"second-child":false,"last-child":"null"},"string_number":"1234"}
          </span>
          <span
            class="br_00693c"
          >
            {
          </span>
        </div>
        <section
          class="ch_f74b76"
          data-type="object"
        >
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "string"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="string"
            >
              "this is a test ..."
            </span>
            ,
          </div>
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "integer"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="number"
            >
              42
            </span>
            ,
          </div>
          <section
            class="se_0c5dd1"
          >
            <div
              class="li_030c5f"
            >
              <svg
                class="to_2745fd"
                height="20"
                viewBox="0 0 1792 1792"
                width="20"
              >
                <path
                  class="mi_7c9e35"
                  d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
                <path
                  class="pl_dc825e"
                  d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
              </svg>
              <span
                class="ke_31c9d8"
              >
                "array"
              </span>
              <span
                class="se_e0d101"
              >
                :
              </span>
              <span
                class="va_251777"
                data-type="array"
              >
                Array[4] [1,2,3,"NaN"]
              </span>
              <span
                class="br_00693c"
              >
                [
              </span>
            </div>
            <section
              class="ch_f74b76"
              data-type="array"
            >
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "0"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="number"
                >
                  1
                </span>
                ,
              </div>
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "1"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="number"
                >
                  2
                </span>
                ,
              </div>
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "2"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="number"
                >
                  3
                </span>
                ,
              </div>
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "3"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="string"
                >
                  "NaN"
                </span>
              </div>
            </section>
            <div
              class="li_030c5f"
            >
              <span
                class="br_00693c"
              >
                ]
              </span>
              ,
            </div>
          </section>
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "float"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="number"
            >
              3.141
            </span>
            ,
          </div>
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "undefined"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="string"
            >
              "undefined"
            </span>
            ,
          </div>
          <section
            class="se_0c5dd1"
          >
            <div
              class="li_030c5f"
            >
              <svg
                class="to_2745fd"
                height="20"
                viewBox="0 0 1792 1792"
                width="20"
              >
                <path
                  class="mi_7c9e35"
                  d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
                <path
                  class="pl_dc825e"
                  d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
              </svg>
              <span
                class="ke_31c9d8"
              >
                "object"
              </span>
              <span
                class="se_e0d101"
              >
                :
              </span>
              <span
                class="va_251777"
                data-type="object"
              >
                Object {"first-child":true,"second-child":false,"last-child":"null"}
              </span>
              <span
                class="br_00693c"
              >
                {
              </span>
            </div>
            <section
              class="ch_f74b76"
              data-type="object"
            >
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "first-child"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="boolean"
                >
                  true
                </span>
                ,
              </div>
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "second-child"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="boolean"
                >
                  false
                </span>
                ,
              </div>
              <div
                class="li_030c5f"
              >
                <span
                  class="ke_31c9d8"
                >
                  "last-child"
                </span>
                <span
                  class="se_e0d101"
                >
                  :
                </span>
                <span
                  class="va_251777"
                  data-type="string"
                >
                  "null"
                </span>
              </div>
            </section>
            <div
              class="li_030c5f"
            >
              <span
                class="br_00693c"
              >
                }
              </span>
              ,
            </div>
          </section>
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "string_number"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="string"
            >
              "1234"
            </span>
          </div>
        </section>
        <div
          class="li_030c5f"
        >
          <span
            class="br_00693c"
          >
            }
          </span>
        </div>
      </section>
    </section>
    <div
      class="li_030c5f"
    >
      <span
        class="br_00693c"
      >
        ]
      </span>
    </div>
  </section>,
]
`;

exports[`json-viewer should be match object content 1`] = `
NodeList [
  <style>
    :host{--main-bg-color: #3a3c44;--main-color: #eee;--string-text-color: #f29766;--number-text-color: #77eda4;--boolean-text-color: #ed77e5;--null-text-color: #fff;position:relative;display:block;padding:.5rem 1rem;background-color:var(--main-bg-color);color:var(--main-color);font:400 14px/1.2rem monospace;text-rendering:optimizelegibility}:host .se_0c5dd1 .li_030c5f{display:block;white-space:nowrap;word-wrap:break-word}:host .se_0c5dd1 .li_030c5f .to_2745fd{display:inline-block;margin-top:-1px;margin-right:.2rem;margin-left:-0.47rem;width:1rem;height:1rem;color:#787878;vertical-align:middle}:host .se_0c5dd1 .li_030c5f .to_2745fd .pl_dc825e,:host .se_0c5dd1 .li_030c5f .to_2745fd .mi_7c9e35{fill:#787878}:host .se_0c5dd1 .li_030c5f .br_00693c{color:#898989}:host .se_0c5dd1 .li_030c5f .ke_31c9d8{color:#cfd0d0}:host .se_0c5dd1 .li_030c5f .se_e0d101{margin:0 6px 0 2px;color:#898989}:host .se_0c5dd1 .li_030c5f .si_2fbe48{margin-left:8px;color:#747272;font-size:.8rem;font-style:italic;user-select:none;vertical-align:middle}:host .se_0c5dd1 .li_030c5f .va_251777[data-type=string]{color:var(--string-text-color)}:host .se_0c5dd1 .li_030c5f .va_251777[data-type=number]{color:var(--number-text-color)}:host .se_0c5dd1 .li_030c5f .va_251777[data-type=boolean]{color:var(--boolean-text-color)}:host .se_0c5dd1 .li_030c5f .va_251777[data-type=null],:host .se_0c5dd1 .li_030c5f .va_251777[data-type=undefined]{color:var(--null-text-color)}:host .se_0c5dd1 .li_030c5f .va_251777[data-type=array],:host .se_0c5dd1 .li_030c5f .va_251777[data-type=object]{overflow:hidden;width:90%;color:#747272;font-size:.8rem;font-style:italic;vertical-align:middle}:host .se_0c5dd1&gt;.li_030c5f{cursor:pointer}:host .se_0c5dd1&gt;.li_030c5f:hover&gt;.ke_31c9d8{color:#e7e7e7}:host .se_0c5dd1&gt;.li_030c5f:hover&gt;.to_2745fd .pl_dc825e,:host .se_0c5dd1&gt;.li_030c5f:hover&gt;.to_2745fd .mi_7c9e35{fill:#979797}:host .se_0c5dd1&gt;.ch_f74b76{padding-left:1rem;border-left:1px dotted #585855}:host .se_0c5dd1&gt;.ch_f74b76[data-type=array]&gt;.li_030c5f&gt;.ke_31c9d8,:host .se_0c5dd1&gt;.ch_f74b76[data-type=array]&gt;.li_030c5f&gt;.se_e0d101{color:#747272;user-select:none}:host .se_0c5dd1[aria-expanded=true]&gt;.li_030c5f&gt;.to_2745fd .pl_dc825e{display:none}:host .se_0c5dd1[aria-expanded=true]&gt;.li_030c5f&gt;.to_2745fd .mi_7c9e35{display:inline-block}:host .se_0c5dd1[aria-expanded=true]&gt;.li_030c5f&gt;.va_251777{display:none}:host .se_0c5dd1[aria-expanded=false]&gt;.li_030c5f&gt;.to_2745fd .pl_dc825e{display:inline-block}:host .se_0c5dd1[aria-expanded=false]&gt;.li_030c5f&gt;.to_2745fd .mi_7c9e35{display:none}:host .se_0c5dd1[aria-expanded=false]&gt;.li_030c5f&gt;.va_251777{display:inline-block}:host .se_0c5dd1[aria-expanded=false]&gt;.li_030c5f&gt;.br_00693c,:host .se_0c5dd1[aria-expanded=false]&gt;.li_030c5f&gt;.si_2fbe48,:host .se_0c5dd1[aria-expanded=false]&gt;.li_030c5f&gt;.to_2745fd .mi_7c9e35,:host .se_0c5dd1[aria-expanded=false]&gt;:last-child,:host .se_0c5dd1[aria-expanded=false]&gt;.ch_f74b76{display:none}:host .se_0c5dd1:hover&gt;.ch_f74b76{border-color:#858580}:host .se_0c5dd1:hover&gt;.li_030c5f&gt;.br_00693c{color:#fffff7}
  </style>,
  <section
    class="se_0c5dd1"
  >
    <div
      class="li_030c5f"
    >
      <svg
        class="to_2745fd"
        height="20"
        viewBox="0 0 1792 1792"
        width="20"
      >
        <path
          class="mi_7c9e35"
          d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
        />
        <path
          class="pl_dc825e"
          d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
        />
      </svg>
      <span
        class="va_251777"
        data-type="object"
      >
        Object {"string":"this is a test ...","integer":42,"array":[1,2,3,"NaN"],"float":3.141,"undefined":"undefined","object":{"first-child":true,"second-child":false,"last-child":"null"},"string_number":"1234"}
      </span>
      <span
        class="br_00693c"
      >
        {
      </span>
    </div>
    <section
      class="ch_f74b76"
      data-type="object"
    >
      <div
        class="li_030c5f"
      >
        <span
          class="ke_31c9d8"
        >
          "string"
        </span>
        <span
          class="se_e0d101"
        >
          :
        </span>
        <span
          class="va_251777"
          data-type="string"
        >
          "this is a test ..."
        </span>
        ,
      </div>
      <div
        class="li_030c5f"
      >
        <span
          class="ke_31c9d8"
        >
          "integer"
        </span>
        <span
          class="se_e0d101"
        >
          :
        </span>
        <span
          class="va_251777"
          data-type="number"
        >
          42
        </span>
        ,
      </div>
      <section
        class="se_0c5dd1"
      >
        <div
          class="li_030c5f"
        >
          <svg
            class="to_2745fd"
            height="20"
            viewBox="0 0 1792 1792"
            width="20"
          >
            <path
              class="mi_7c9e35"
              d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
            <path
              class="pl_dc825e"
              d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
          </svg>
          <span
            class="ke_31c9d8"
          >
            "array"
          </span>
          <span
            class="se_e0d101"
          >
            :
          </span>
          <span
            class="va_251777"
            data-type="array"
          >
            Array[4] [1,2,3,"NaN"]
          </span>
          <span
            class="br_00693c"
          >
            [
          </span>
        </div>
        <section
          class="ch_f74b76"
          data-type="array"
        >
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "0"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="number"
            >
              1
            </span>
            ,
          </div>
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "1"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="number"
            >
              2
            </span>
            ,
          </div>
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "2"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="number"
            >
              3
            </span>
            ,
          </div>
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "3"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="string"
            >
              "NaN"
            </span>
          </div>
        </section>
        <div
          class="li_030c5f"
        >
          <span
            class="br_00693c"
          >
            ]
          </span>
          ,
        </div>
      </section>
      <div
        class="li_030c5f"
      >
        <span
          class="ke_31c9d8"
        >
          "float"
        </span>
        <span
          class="se_e0d101"
        >
          :
        </span>
        <span
          class="va_251777"
          data-type="number"
        >
          3.141
        </span>
        ,
      </div>
      <div
        class="li_030c5f"
      >
        <span
          class="ke_31c9d8"
        >
          "undefined"
        </span>
        <span
          class="se_e0d101"
        >
          :
        </span>
        <span
          class="va_251777"
          data-type="string"
        >
          "undefined"
        </span>
        ,
      </div>
      <section
        class="se_0c5dd1"
      >
        <div
          class="li_030c5f"
        >
          <svg
            class="to_2745fd"
            height="20"
            viewBox="0 0 1792 1792"
            width="20"
          >
            <path
              class="mi_7c9e35"
              d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
            <path
              class="pl_dc825e"
              d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
          </svg>
          <span
            class="ke_31c9d8"
          >
            "object"
          </span>
          <span
            class="se_e0d101"
          >
            :
          </span>
          <span
            class="va_251777"
            data-type="object"
          >
            Object {"first-child":true,"second-child":false,"last-child":"null"}
          </span>
          <span
            class="br_00693c"
          >
            {
          </span>
        </div>
        <section
          class="ch_f74b76"
          data-type="object"
        >
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "first-child"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="boolean"
            >
              true
            </span>
            ,
          </div>
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "second-child"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="boolean"
            >
              false
            </span>
            ,
          </div>
          <div
            class="li_030c5f"
          >
            <span
              class="ke_31c9d8"
            >
              "last-child"
            </span>
            <span
              class="se_e0d101"
            >
              :
            </span>
            <span
              class="va_251777"
              data-type="string"
            >
              "null"
            </span>
          </div>
        </section>
        <div
          class="li_030c5f"
        >
          <span
            class="br_00693c"
          >
            }
          </span>
          ,
        </div>
      </section>
      <div
        class="li_030c5f"
      >
        <span
          class="ke_31c9d8"
        >
          "string_number"
        </span>
        <span
          class="se_e0d101"
        >
          :
        </span>
        <span
          class="va_251777"
          data-type="string"
        >
          "1234"
        </span>
      </div>
    </section>
    <div
      class="li_030c5f"
    >
      <span
        class="br_00693c"
      >
        }
      </span>
    </div>
  </section>,
]
`;
